<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="Lista de Tarefas"
            app:titleTextColor="@color/white" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="380dp"
            android:layout_height="220dp"
            app:cardCornerRadius="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:orientation="vertical">

            <EditText
                android:id="@+id/cardView_titulo"
                android:layout_width="360dp"
                android:layout_height="48dp"
                android:text="@string/titulo"
                android:textStyle="bold"
                android:textSize="24sp"
                android:textColor="@color/black"/>

            <EditText
                android:id="@+id/cardView_descricao"
                android:layout_width="360dp"
                android:layout_height="110dp"
                android:text="@string/descricao"
                android:textSize="20sp"
                android:textColor="@color/black"/>

                <TextView
                    android:layout_width="360dp"
                    android:layout_height="40dp"
                    android:text="Prioridade: "
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>


            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabButton"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="310dp"
            android:layout_marginTop="650dp"
            android:backgroundTint="@color/white"
            android:contentDescription="@string/adicionar_nova_tarefa"
            android:src="@drawable/ic_add"
            app:layout_anchor="@layout/activity_novas_tarefas"
            app:layout_anchorGravity="bottom|end"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_mes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/adicione_uma_tarefa"
            android:textSize="18sp"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>